--- a/Source/Deps/SDL2_image-2.0.5/external/libpng-1.6.37/projects/visualc71/libpng.vcxproj
+++ b/Source/Deps/SDL2_image-2.0.5/external/libpng-1.6.37/projects/visualc71/libpng.vcxproj
@@ -25,6 +25,7 @@
   <PropertyGroup Label="Globals">
     <RootNamespace>libpng</RootNamespace>
     <ProjectGuid>{0008960E-E0DD-41A6-8265-00B31DDB4C21}</ProjectGuid>
+    <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='LIB Debug|Win32'" Label="Configuration">
@@ -70,13 +71,15 @@
     <_ProjectFileVersion>16.0.29511.113</_ProjectFileVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='DLL Release|Win32'">
-    <OutDir>.\Win32_DLL_Release\</OutDir>
-    <IntDir>.\Win32_DLL_Release\</IntDir>
+    <OutDir>$(SolutionDir)bin\libs\Release\$(PlatformShortName)\SDL_Image\external\</OutDir>
+    <IntDir>.\Release\</IntDir>
     <LinkIncremental>false</LinkIncremental>
+    <TargetName>$(ProjectName)16</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='DLL Debug|Win32'">
-    <OutDir>.\Win32_DLL_Debug\</OutDir>
-    <IntDir>.\Win32_DLL_Debug\</IntDir>
+    <OutDir>$(SolutionDir)bin\libs\Debug\$(PlatformShortName)\SDL_Image\external</OutDir>
+    <IntDir>.\Debug\</IntDir>
+    <TargetName>$(ProjectName)16</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='DLL VB|Win32'">
     <OutDir>.\Win32_DLL_VB\</OutDir>
