--- a/Source/Deps/SDL2_image-2.0.5/external/libpng-1.6.37/projects/visualc71/zlib.vcxproj
+++ b/Source/Deps/SDL2_image-2.0.5/external/libpng-1.6.37/projects/visualc71/zlib.vcxproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{2D4F8105-7D21-454C-9932-B47CAB71A5C0}</ProjectGuid>
+    <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='LIB Debug|Win32'" Label="Configuration">
@@ -58,13 +59,15 @@
     <_ProjectFileVersion>16.0.29511.113</_ProjectFileVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='DLL Release|Win32'">
-    <OutDir>.\Win32_DLL_Release\ZLib\</OutDir>
-    <IntDir>.\Win32_DLL_Release\ZLib\</IntDir>
+    <OutDir>$(SolutionDir)bin\libs\Release\$(PlatformShortName)\SDL_Image\external\Zlib\</OutDir>
+    <IntDir>.\Release\ZLib\</IntDir>
     <LinkIncremental>false</LinkIncremental>
+    <TargetName>$(ProjectName)1</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='DLL Debug|Win32'">
-    <OutDir>.\Win32_DLL_Debug\ZLib\</OutDir>
-    <IntDir>.\Win32_DLL_Debug\ZLib\</IntDir>
+    <OutDir>$(SolutionDir)bin\libs\Debug\$(PlatformShortName)\SDL_Image\external\Zlib\</OutDir>
+    <IntDir>.\Debug\ZLib\</IntDir>
+    <TargetName>$(ProjectName)1</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='LIB Release|Win32'">
     <OutDir>.\Win32_LIB_Release\ZLib\</OutDir>
