--- a/Source/Deps/SDL2_ttf-2.0.15/external/freetype-2.9.1/builds/windows/vc2010/freetype.vcxproj
+++ b/Source/Deps/SDL2_ttf-2.0.15/external/freetype-2.9.1/builds/windows/vc2010/freetype.vcxproj
@@ -119,7 +119,7 @@
   </ImportGroup>
   <PropertyGroup>
     <OutDir>$(SolutionDir)bin\libs\$(Configuration)\$(PlatformShortName)\SDL_ttf\external\</OutDir>
-    <IntDir>..\..\..\objs\$(Platform)\$(Configuration)\</IntDir>
+    <IntDir>$(SolutionDir)obj\lib\$(Configuration)$(PlatformShortName)\SDL_ttf\external\freetype\</IntDir>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
     <CodeAnalysisRules />
     <CodeAnalysisRuleAssemblies />
