--- a/Source/Deps/EASTL/EASTL.vcxproj
+++ b/Source/Deps/EASTL/EASTL.vcxproj
@@ -73,18 +73,22 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
     <OutDir>$(SolutionDir)bin\libs\$(Configuration)\$(PlatformShortName)\EASTL\</OutDir>
+    <IntDir>$(SolutionDir)obj\game\$(Configuration)$(PlatformShortName)</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
     <OutDir>$(SolutionDir)bin\libs\$(Configuration)\$(PlatformShortName)\EASTL\</OutDir>
+    <IntDir>$(SolutionDir)obj\game\$(Configuration)$(PlatformShortName)</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
     <OutDir>$(SolutionDir)bin\libs\$(Configuration)\$(PlatformShortName)\EASTL\</OutDir>
+    <IntDir>$(SolutionDir)obj\game\$(Configuration)$(PlatformShortName)</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
     <OutDir>$(SolutionDir)bin\libs\$(Configuration)\$(PlatformShortName)\EASTL\</OutDir>
+    <IntDir>$(SolutionDir)obj\game\$(Configuration)$(PlatformShortName)</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
