--- a/Source/Game.vcxproj
+++ b/Source/Game.vcxproj
@@ -72,18 +72,22 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
     <OutDir>$(SolutionDir)bin\Game\$(Configuration)\$(PlatformShortName)\</OutDir>
+    <IntDir>$(SolutionDir)obj\game\$(Configuration)$(PlatformShortName)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
     <OutDir>$(SolutionDir)bin\Game\$(Configuration)\$(PlatformShortName)\</OutDir>
+    <IntDir>$(SolutionDir)obj\game\$(Configuration)$(PlatformShortName)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
     <OutDir>$(SolutionDir)bin\Game\$(Configuration)\$(PlatformShortName)\</OutDir>
+    <IntDir>$(SolutionDir)obj\game\$(Configuration)$(PlatformShortName)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
     <OutDir>$(SolutionDir)bin\Game\$(Configuration)\$(PlatformShortName)\</OutDir>
+    <IntDir>$(SolutionDir)obj\game\$(Configuration)$(PlatformShortName)\</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
