--- a/Source/Game.vcxproj
+++ b/Source/Game.vcxproj
@@ -98,7 +98,7 @@
       <AdditionalIncludeDirectories>$(ProjectDir)Deps\SDL2-2.0.10\include;$(ProjectDir)Deps\SDL2_image-2.0.5;$(ProjectDir)Deps\SDL2_mixer-2.0.4;$(ProjectDir)Deps\SDL2_ttf-2.0.15;$(ProjectDir)Deps\pugixml-1.10\src;$(ProjectDir)Deps\EASTL\include;$(ProjectDir)Deps\EASTL\include\Common</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>$(SolutionDir)bin\libs\$(Configuration)\$(PlatformShortName)\EASTL\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>EASTL.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
@@ -122,7 +122,7 @@ copy "$(SolutionDir)bin\libs\Debug\$(PlatformShortName)\SDL_Image\external\Zlib\
       <AdditionalIncludeDirectories>$(ProjectDir)Deps\SDL2-2.0.10\include;$(ProjectDir)Deps\SDL2_image-2.0.5;$(ProjectDir)Deps\SDL2_mixer-2.0.4;$(ProjectDir)Deps\SDL2_ttf-2.0.15;$(ProjectDir)Deps\pugixml-1.10\src;$(ProjectDir)Deps\EASTL\include;$(ProjectDir)Deps\EASTL\include\Common</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>$(SolutionDir)bin\libs\$(Configuration)\$(PlatformShortName)\EASTL\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>EASTL.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
@@ -148,7 +148,7 @@ copy "$(SolutionDir)bin\libs\Debug\$(PlatformShortName)\SDL_Image\external\Zlib\
       <AdditionalIncludeDirectories>$(ProjectDir)Deps\SDL2-2.0.10\include;$(ProjectDir)Deps\SDL2_image-2.0.5;$(ProjectDir)Deps\SDL2_mixer-2.0.4;$(ProjectDir)Deps\SDL2_ttf-2.0.15;$(ProjectDir)Deps\pugixml-1.10\src;$(ProjectDir)Deps\EASTL\include;$(ProjectDir)Deps\EASTL\include\Common</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -176,7 +176,7 @@ copy "$(SolutionDir)bin\libs\Release\$(PlatformShortName)\SDL_Image\external\Zli
       <AdditionalIncludeDirectories>$(ProjectDir)Deps\SDL2-2.0.10\include;$(ProjectDir)Deps\SDL2_image-2.0.5;$(ProjectDir)Deps\SDL2_mixer-2.0.4;$(ProjectDir)Deps\SDL2_ttf-2.0.15;$(ProjectDir)Deps\pugixml-1.10\src;$(ProjectDir)Deps\EASTL\include;$(ProjectDir)Deps\EASTL\include\Common</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -194,8 +194,16 @@ copy "$(SolutionDir)bin\libs\Release\$(PlatformShortName)\SDL_Image\external\Zli
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="j1App.cpp" />
     <ClCompile Include="Deps\pugixml-1.10\src\pugixml.cpp" />
+    <ClCompile Include="j1PerfTimer.cpp" />
+    <ClCompile Include="j1Render.cpp" />
+    <ClCompile Include="j1Scene.cpp" />
+    <ClCompile Include="j1Textures.cpp" />
+    <ClCompile Include="j1Timer.cpp" />
+    <ClCompile Include="j1Window.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="p2Log.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="Deps\EASTL\EASTL.vcxproj">
@@ -216,6 +224,18 @@ copy "$(SolutionDir)bin\libs\Release\$(PlatformShortName)\SDL_Image\external\Zli
     <ProjectReference Include="Deps\SDL2_ttf-2.0.15\VisualC\SDL_ttf.vcxproj">
       <Project>{dddbd07d-dc76-4af6-8d02-3e2deb6ee255}</Project>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="j1App.h" />
+    <ClInclude Include="j1Module.h" />
+    <ClInclude Include="j1PerfTimer.h" />
+    <ClInclude Include="j1Render.h" />
+    <ClInclude Include="j1Scene.h" />
+    <ClInclude Include="j1Textures.h" />
+    <ClInclude Include="j1Timer.h" />
+    <ClInclude Include="j1Window.h" />
+    <ClInclude Include="p2Defs.h" />
+    <ClInclude Include="p2Log.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
