--- a/Source/Game.vcxproj
+++ b/Source/Game.vcxproj
@@ -196,6 +196,7 @@ copy "$(SolutionDir)bin\libs\Release\$(PlatformShortName)\SDL_Image\external\Zli
   <ItemGroup>
     <ClCompile Include="j1App.cpp" />
     <ClCompile Include="Deps\pugixml-1.10\src\pugixml.cpp" />
+    <ClCompile Include="j1Input.cpp" />
     <ClCompile Include="j1PerfTimer.cpp" />
     <ClCompile Include="j1Render.cpp" />
     <ClCompile Include="j1Scene.cpp" />
@@ -227,6 +228,7 @@ copy "$(SolutionDir)bin\libs\Release\$(PlatformShortName)\SDL_Image\external\Zli
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="j1App.h" />
+    <ClInclude Include="j1Input.h" />
     <ClInclude Include="j1Module.h" />
     <ClInclude Include="j1PerfTimer.h" />
     <ClInclude Include="j1Render.h" />
