--- a/Source/Game.vcxproj.filters
+++ b/Source/Game.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="j1Textures.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="j1Input.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="j1App.h">
@@ -75,6 +78,9 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="j1Textures.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="j1Input.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
