--- a/Source/Game.vcxproj
+++ b/Source/Game.vcxproj
@@ -93,9 +93,10 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>$(ProjectDir)Deps\SDL2-2.0.10\include;$(ProjectDir)Deps\SDL2_image-2.0.5;$(ProjectDir)Deps\SDL2_mixer-2.0.4;$(ProjectDir)Deps\SDL2_ttf-2.0.15;$(ProjectDir)Deps\pugixml-1.10\src;$(ProjectDir)Deps\EASTL\include;$(ProjectDir)Deps\EASTL\include\Common</AdditionalIncludeDirectories>
+      <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -117,9 +118,10 @@ copy "$(SolutionDir)bin\libs\Debug\$(PlatformShortName)\SDL_Image\external\Zlib\
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>$(ProjectDir)Deps\SDL2-2.0.10\include;$(ProjectDir)Deps\SDL2_image-2.0.5;$(ProjectDir)Deps\SDL2_mixer-2.0.4;$(ProjectDir)Deps\SDL2_ttf-2.0.15;$(ProjectDir)Deps\pugixml-1.10\src;$(ProjectDir)Deps\EASTL\include;$(ProjectDir)Deps\EASTL\include\Common</AdditionalIncludeDirectories>
+      <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -143,9 +145,10 @@ copy "$(SolutionDir)bin\libs\Debug\$(PlatformShortName)\SDL_Image\external\Zlib\
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>$(ProjectDir)Deps\SDL2-2.0.10\include;$(ProjectDir)Deps\SDL2_image-2.0.5;$(ProjectDir)Deps\SDL2_mixer-2.0.4;$(ProjectDir)Deps\SDL2_ttf-2.0.15;$(ProjectDir)Deps\pugixml-1.10\src;$(ProjectDir)Deps\EASTL\include;$(ProjectDir)Deps\EASTL\include\Common</AdditionalIncludeDirectories>
+      <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -171,9 +174,10 @@ copy "$(SolutionDir)bin\libs\Release\$(PlatformShortName)\SDL_Image\external\Zli
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>$(ProjectDir)Deps\SDL2-2.0.10\include;$(ProjectDir)Deps\SDL2_image-2.0.5;$(ProjectDir)Deps\SDL2_mixer-2.0.4;$(ProjectDir)Deps\SDL2_ttf-2.0.15;$(ProjectDir)Deps\pugixml-1.10\src;$(ProjectDir)Deps\EASTL\include;$(ProjectDir)Deps\EASTL\include\Common</AdditionalIncludeDirectories>
+      <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
