--- a/Source/Deps/SDL2_image-2.0.5/external/libpng-1.6.37/projects/visualc71/libpng.vcxproj
+++ b/Source/Deps/SDL2_image-2.0.5/external/libpng-1.6.37/projects/visualc71/libpng.vcxproj
@@ -77,7 +77,7 @@
     <TargetName>$(ProjectName)16</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='DLL Debug|Win32'">
-    <OutDir>$(SolutionDir)bin\libs\Debug\$(PlatformShortName)\SDL_Image\external</OutDir>
+    <OutDir>$(SolutionDir)bin\libs\Debug\$(PlatformShortName)\SDL_Image\external\</OutDir>
     <IntDir>.\Debug\</IntDir>
     <TargetName>$(ProjectName)16</TargetName>
   </PropertyGroup>
