--- a/Source/Game.vcxproj
+++ b/Source/Game.vcxproj
@@ -206,6 +206,7 @@ copy "$(SolutionDir)bin\libs\Release\$(PlatformShortName)\SDL_Image\external\Zli
   <ItemGroup>
     <ClCompile Include="j1App.cpp" />
     <ClCompile Include="Deps\pugixml-1.10\src\pugixml.cpp" />
+    <ClCompile Include="j1Audio.cpp" />
     <ClCompile Include="j1Input.cpp" />
     <ClCompile Include="j1PerfTimer.cpp" />
     <ClCompile Include="j1Render.cpp" />
@@ -238,6 +239,7 @@ copy "$(SolutionDir)bin\libs\Release\$(PlatformShortName)\SDL_Image\external\Zli
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="j1App.h" />
+    <ClInclude Include="j1Audio.h" />
     <ClInclude Include="j1Input.h" />
     <ClInclude Include="j1Module.h" />
     <ClInclude Include="j1PerfTimer.h" />
